# musicbrainzapi-cv-airelogic

./: CHANGELOG.md  CHANGELOG.rst  Dockerfile  README.rst  album_statistics.json  all_albums_lyrics.json  lyrics_count.json  lyrics_sum_all_album.json  mkdocs.yml  output.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
_docs/source/: CLI.rst
_docs/source/_static/: custom.css
_docs/source/modules/: modules.rst  musicbrainzapi.rst  musicbrainzapi.wordcloud.rst
docs/: python.md  test.md  testdoc.md
docs/source/: changelog.rst  comments.rst  conf.py  index.rst  introduction.rst  toc.rst
docs/source/modules/: modules.rst  musicbrainzapi.api.authenticate.rst  musicbrainzapi.api.lyrics.builder.rst  musicbrainzapi.api.lyrics.concrete_builder.rst  musicbrainzapi.api.lyrics.director.rst  musicbrainzapi.api.lyrics.rst  musicbrainzapi.api.rst  musicbrainzapi.cli.cli.rst  musicbrainzapi.cli.commands.cmd_lyrics.rst  musicbrainzapi.cli.commands.rst  musicbrainzapi.cli.rst  musicbrainzapi.rst  musicbrainzapi.wordcloud.resources.rst  musicbrainzapi.wordcloud.rst
src/musicbrainzapi/: __header__.py  __init__.py
src/musicbrainzapi/api/: authenticate.py
src/musicbrainzapi/api/command_builders/: lyrics.py  test.py
src/musicbrainzapi/api/lyrics/: __init__.py  builder.py  concrete_builder.py  director.py
src/musicbrainzapi/cli/: cli.py  lyrics.json  lyrics_count.json  test.json
src/musicbrainzapi/cli/commands/: *REPL* [python]  cmd_lyrics.py
src/musicbrainzapi/wordcloud/: __init__.py
tests/: test_musicbrainzapi.py
