[tool.poetry]
name = "musicbrainzapi"
version = "1.0.0"
description = ""
authors = ["dtomlinson <dtomlinson@panaetius.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
musicbrainzngs = "^0.7.1"
addict = "^2.2.1"
progress = "^1.5"
numpy = "^1.18.1"
beautifultable = "^0.8.0"
wordcloud = "^1.6.0"
multidict = "^4.7.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-language-server = "^0.31.8"
Rope = "^0.16.0"
Pyflakes = "^2.1.1"
McCabe = "^0.6.1"
pycodestyle = "^2.5.0"
pydocstyle = "^5.0.2"
autopep8 = "^1.5"
YAPF = "^0.29.0"
pudb = "^2019.2"
pyls-black = "^0.4.4"

[tool.poetry.plugins."console_scripts"]
"musicbrainzapi" = "musicbrainzapi.cli.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

