[tool.poetry]
name = "musicbrainzapi"
version = "1.0.0"
description = "Python module to calculate statistics and generate a wordcloud for a given artist. Uses the Musicbrainz API and the lyrics.ovh API."
license = "MIT"
authors = ["dtomlinson <dtomlinson@panaetius.co.uk>"]
readme = "/Users/dtomlinson/git-repos/cv/musicbrainzapi/README.rst"
homepage = "https://github.com/dtomlinson91/musicbrainzapi-cv-airelogic"
repository = "https://github.com/dtomlinson91/musicbrainzapi-cv-airelogic"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
musicbrainzngs = "^0.7.1"
addict = "^2.2.1"
numpy = "^1.18.1"
beautifultable = "^0.8.0"
wordcloud = "^1.6.0"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pudb = "^2019.2"
sphinx = "^2.4.4"
sphinx_rtd_theme = "^0.4.3"
sphinx-click = "^2.3.1"
prospector = "^1.2.0"
pylint = "^2.4.4"
pydoc-markdown = {git = "https://github.com/NiklasRosenstein/pydoc-markdown.git", rev = "develop"}

[tool.poetry.plugins."console_scripts"]
"musicbrainzapi" = "musicbrainzapi.cli.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

